# ZetaFold

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
docs/: development.md
src/zetafold/: __init__.py
