[project]
name = "zetafold"
version = "0.1.0"
description = "ZetaFold"
authors = [{ name = "Minsoo Kim", email = "vv137.xyz@gmail.com" }]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "pandas",
    "rdkit",
    "biopython",
    "modelcif",
    "pydantic",
    "jaxtyping",
]


[project.urls]
Repository = "https://github.com/vv137/ZetaFold"


[project.scripts]


[build-system]
requires = ["setuptools >= 72.0"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = ["pre-commit"]
lint = ["ruff"]
test = ["pytest", "requests"]


[tool.ruff]
src = ["src"]
target-version = "py311"
lint.select = ["ALL"]
lint.ignore = [
    "COM812", # Conflicts with the formatter
]
lint.extend-select = ["I"]


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
]
"docs/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]
"scripts/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"
